--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.13.1",
+    "gsap": "^3.13.0",
+    "next": "16.0.1",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "three": "^0.181.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "@types/node": "^20.19.24",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9.39.0",
+    "eslint-config-next": "16.0.1",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3"
   }
 }
