--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "axios": "^1.13.1",
     "gsap": "^3.13.0",
     "next": "16.0.1",
-    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "three": "^0.181.0",
@@ -24,9 +22,12 @@
     "@types/node": "^20.19.24",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
+    "@types/three": "^0.181.0",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.0",
     "eslint-config-next": "16.0.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
