--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "three": "^0.181.0",
+    "three": "^0.150.1",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
